CSCEXAM-1241 Check pre-enrolments for all users (including existing) - add some logging for failed login attempts